Fix: Question-Box static positioning and spacing, plus scrollbar if window is too small. Fix: Sections AND Topics considered when quizzing. Fix: Routes now include section in the url as well. Question 123 on /question/section/topic/123

--- a/static/styles.css
+++ b/static/styles.css
@@ -18,16 +18,16 @@ nav .navbar-brand .green {
     color: #2e944b;
 }
 
+.navbar {
+    z-index: 1000;
+}
+
 #question-text {
     margin-bottom: 20px;
 }
 
 #question-box {
-    display        : flex;
-    flex-direction : column;
-    justify-content: center;
-    height         : 75vh;
-    margin-top     : 20px;
+    margin-top : 100px;
 }
 
 #question {
